--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@junobuild/core": "^0.0.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "sort-by": "^0.0.2",
+    "tw-elements": "^1.0.0-beta1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
