--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dfinity/agent": "^0.20.2",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
     "@junobuild/core": "^0.0.23",
+    "@open-ic/openchat-xframe": "^1.0.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "semantic-ui-css": "^2.5.0",
@@ -24,7 +28,9 @@
     "tw-elements": "^1.0.0-beta1"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/react": "^18.0.27",
+    "@types/react-big-calendar": "^1.8.7",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
