--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@heroicons/react": "^2.0.16",
     "@junobuild/core": "^0.0.23",
     "@open-ic/openchat-xframe": "^1.0.4",
+    "@tmcw/togeojson": "^5.8.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.8.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gemoji": "^8.0.0",
+    "remark-gfm": "^4.0.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "sort-by": "^0.0.2",
